# programs-and-data-structures

./: README.md
c1/: euclid.c  euclidtime.c  factorial.c  horners.c  pointer.c  rdint.c  rec1.c  rec2.c  sum.c  timetest.c  twodim.c
c1/chqsort/: main.c
c1/intio/: CMakeLists.txt  README.md  clean_all  compile  compile_intcpy  intcpy.c  intio.c  intio.h  main.c  makefile  nums.txt  run_intcpy_
c2/: gensort.c
c2/binsearch/: binsearch.c  binsearch.h  binsearch_example.c  binsearch_test.c  makefile  mintest.h
c2/chselsort/: chselsort.c  input.txt  makefile
c2/qsort/: qsort.c  qsortlib.c
c2/qsort/chqsort/: main.c  makefile  words.txt
c8/topological_sort/: README.md  main.c  makefile
c8/topological_sort/rsc/: cycle.dot  dag.dot
